--- a/Proxmox/Ansible/roles/exchange/tasks/main.yml
+++ b/Proxmox/Ansible/roles/exchange/tasks/main.yml
@@ -26,7 +26,7 @@
   register: dir
 
 - name: Git clone Detectionlab
-  win_shell: git clone https://github.com/tmenochet/DetectionLab.git
+  win_shell: git clone --branch exchange_cu11 https://github.com/tmenochet/DetectionLab.git
   args:
     chdir: 'c:\'
   when: not dir.stat.exists
